refactor: refactor LinkPreviewComponent to dump component

--- a/src/app/widgets/timeline-container/edit-event-form/edit-event-form.component.html
+++ b/src/app/widgets/timeline-container/edit-event-form/edit-event-form.component.html
@@ -142,8 +142,8 @@
       <div class="label" [class.hidden]="!form.controls.link.errors">
         <span class="label-text-alt text-error">Wrong URL</span>
       </div>
-      @if (previewLink(); as link) {
-        <app-link-preview [link]="link" class="mt-4" />
+      @if (previewHolder(); as previewHolder) {
+        <app-link-preview [preview]="previewHolder" class="mt-4" />
       }
     </label>
   }
