--- a/src/app/pages/non-authorized/develop/develop-page.component.html
+++ b/src/app/pages/non-authorized/develop/develop-page.component.html
@@ -4,10 +4,10 @@
 
     <div class="py-4">
       <h2 class="text-2xl">LinkPreviewComponent</h2>
-      <div class="grid grid-cols-3">
-        <app-link-preview [link]="dumpLink()" />
-        <app-link-preview [link]="dumpLink()" />
-        <app-link-preview [link]="dumpLink()" />
+      <div class="mt-4 grid grid-cols-2 gap-4">
+        <app-link-preview [preview]="dumpPreviewWithError()" />
+        <app-link-preview [preview]="dumpPreview()" />
+        <app-link-preview [preview]="dumpPreviewLoading()" class="col-span-2" />
       </div>
     </div>
   </div>
