--- a/src/app/widgets/timeline-container/edit-event-form/link-preview/link-preview.component.html
+++ b/src/app/widgets/timeline-container/edit-event-form/link-preview/link-preview.component.html
@@ -1,4 +1,4 @@
-@if (previewHolder(); as previewHolder) {
+@if (preview(); as previewHolder) {
   @if (previewHolder.data.status === Status.ERROR) {
     <div class="flex h-32 gap-4">
       <span
@@ -28,7 +28,8 @@
   }
   @if (previewHolder.data.status === Status.SUCCESS) {
     <div class="flex h-32 gap-4">
-      <span class="w-48">
+      <span
+        class="flex w-48 place-content-center items-center rounded-lg border-2 border-success">
         <img
           src="{{ previewHolder.data.data?.image }}"
           [alt]="previewHolder.data.data?.title || previewHolder.url" />
