feat: add button for adding issue on github

--- a/src/app/share/layout/footer/footer.component.html
+++ b/src/app/share/layout/footer/footer.component.html
@@ -4,6 +4,19 @@
     <p>Copyright © 2024 - All right reserved</p>
   </aside>
   <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
+    <div
+      class="tooltip tooltip-left tooltip-open tooltip-primary"
+      data-tip="Add an issue">
+      <a
+        href="https://github.com/wert2all/timeline-frontend/issues/new"
+        target="_blank">
+        <ng-icon name="saxGhostOutline" size="32"></ng-icon>
+      </a>
+    </div>
+    <div class="divider divider-horizontal"></div>
+    <a href="https://github.com/wert2all/timeline-frontend/" target="_blank">
+      <ng-icon name="hugeGithub01" size="32"></ng-icon>
+    </a>
     <a href="https://www.youtube.com/@TimelineDev-ep9vd">
       <ng-icon name="saxVideoSquareOutline" size="32"></ng-icon>
     </a>
