--- a/src/app/share/layout/header/header.component.html
+++ b/src/app/share/layout/header/header.component.html
@@ -10,6 +10,15 @@
     </a>
   </div>
   <div class="flex-none gap-2">
+    <div
+      class="tooltip tooltip-left tooltip-primary me-14"
+      data-tip="Add an issue">
+      <a
+        href="https://github.com/wert2all/timeline-frontend/issues/new"
+        target="_blank">
+        <ng-icon name="saxGhostOutline" size="32"></ng-icon>
+      </a>
+    </div>
     <app-login-button
       [isLoading]="isLoading()"
       [isAuthorized]="isAuthorized()"
