--- a/src/app/pages/non-authorized/develop/develop-page.component.html
+++ b/src/app/pages/non-authorized/develop/develop-page.component.html
@@ -14,6 +14,9 @@
       <h2 class="text-2xl">EventAdditionalContentComponent</h2>
       <div class="mt-4 grid grid-cols-2 gap-4">
         <app-timeline-event-additional-content [event]="dumpAddEvent()" />
+        <app-timeline-event-additional-content
+          [event]="dumpAddEvent()"
+          [openTab]="1" />
       </div>
     </div>
   </div>
