refactor: refactoring switching tabs on edit event form

--- a/src/app/pages/non-authorized/develop/develop-page.component.html
+++ b/src/app/pages/non-authorized/develop/develop-page.component.html
@@ -17,6 +17,12 @@
         <app-timeline-event-additional-content
           [event]="dumpAddEvent()"
           [openTab]="1" />
+        <app-timeline-event-additional-content
+          [event]="dumpAddEvent()"
+          [openTab]="2" />
+        <app-timeline-event-additional-content
+          [event]="dumpAddEvent()"
+          [openTab]="3" />
       </div>
     </div>
   </div>
