--- a/src/app/share/timeline/timeline/event/content/additional/additional-content.component.html
+++ b/src/app/share/timeline/timeline/event/content/additional/additional-content.component.html
@@ -1,6 +1,6 @@
 @switch (event().type) {
   @case (EditableTimelineTypes.draft) {
-    <div class="event-form bg-lighter timeline-box pt-0">
+    <div class="event-form bg-lighter timeline-box relative pt-0">
       <app-edit-event-form
         [openTab]="openTab()"
         (changeValues)="changeValues.emit($event)"
