--- a/src/app/pages/non-authorized/develop/develop-page.component.html
+++ b/src/app/pages/non-authorized/develop/develop-page.component.html
@@ -10,6 +10,7 @@
         <app-link-preview [preview]="dumpPreviewLoading()" class="col-span-2" />
       </div>
     </div>
+
     <div class="py-4">
       <h2 class="text-2xl">EventAdditionalContentComponent</h2>
       <div class="mt-4 grid grid-cols-2 gap-4">
@@ -23,6 +24,13 @@
         <app-timeline-event-additional-content
           [event]="dumpAddEvent()"
           [openTab]="3" />
+      </div>
+    </div>
+    <div class="py-4">
+      <h2 class="text-2xl">TimelineEventMenuComponent</h2>
+      <div class="mt-4 grid grid-cols-2 gap-4">
+        <app-timeline-event-menu
+          [timelineEvent]="dumpAddEvent()"></app-timeline-event-menu>
       </div>
     </div>
   </div>
