feat: add tooltip to private checkbox

--- a/src/app/widgets/timeline-container/edit-event-form/edit-event-form.component.html
+++ b/src/app/widgets/timeline-container/edit-event-form/edit-event-form.component.html
@@ -157,8 +157,10 @@
         Add
       </button>
     </div>
-    <div class="shrink">
-      <label for="is_private" class="flex place-items-center gap-2 opacity-40">
+    <div class="tooltip tooltip-top tooltip-info shrink" data-tip="coming soon">
+      <label
+        for="is_private"
+        class="flex cursor-not-allowed place-items-center gap-2 opacity-40">
         <input
           id="is_private"
           type="checkbox"
