--- a/src/app/pages/non-authorized/develop/develop-page.component.html
+++ b/src/app/pages/non-authorized/develop/develop-page.component.html
@@ -3,6 +3,22 @@
     <app-content-title title="UI components" />
 
     <div class="py-4">
+      <h2 class="text-2xl">MarkdownContentComponent</h2>
+      <div class="mt-4 grid grid-cols-2 gap-4">
+        <app-markdown-content [content]="dumpContent()" />
+      </div>
+    </div>
+
+    <div class="py-4">
+      <h2 class="text-2xl">LinkPreviewComponent</h2>
+      <div class="mt-4 grid grid-cols-2 gap-4">
+        <app-link-preview [preview]="dumpPreviewWithError()" />
+        <app-link-preview [preview]="dumpPreview()" />
+        <app-link-preview [preview]="dumpPreviewLoading()" class="col-span-2" />
+      </div>
+    </div>
+
+    <div class="py-4">
       <h2 class="text-2xl">EventAdditionalContentComponent</h2>
       <div class="mt-4 grid grid-cols-2 gap-4">
         <app-timeline-event-additional-content [event]="dumpAddEvent()" />
