feat: create preview for editing events

--- a/src/app/share/timeline/timeline/event/content/additional/additional-content.component.html
+++ b/src/app/share/timeline/timeline/event/content/additional/additional-content.component.html
@@ -18,7 +18,8 @@
       <app-timeline-event-menu
         class="h-full w-full"
         [timelineEvent]="event()"
-        (onDelete)="onDelete.emit($event)" />
+        (onDelete)="onDelete.emit($event)"
+        (onEdit)="onEdit.emit($event)" />
     </div>
   }
 }
