--- a/src/app/widgets/timeline-container/timeline-container.component.html
+++ b/src/app/widgets/timeline-container/timeline-container.component.html
@@ -18,7 +18,8 @@
     (formPreview)="updatePreview($event)"
     (saveAction)="insertEvent()"
     (dismissAction)="dismiss()"
-    (onDelete)="deleteEvent($event)" />
+    (onDelete)="deleteEvent($event)"
+    (onEdit)="editEvent($event)" />
 }
 
 <app-modal-confirm
