--- a/src/app/share/timeline/timeline/event/menu/menu.component.html
+++ b/src/app/share/timeline/timeline/event/menu/menu.component.html
@@ -1,17 +1,21 @@
 @if (timelineEvent().id) {
   <ul class="bg-lighter menu menu-horizontal gap-2 rounded-box">
     <li>
-      <a class="btn btn-ghost btn-sm">
+      <a
+        tabindex="0"
+        class="btn btn-ghost btn-sm"
+        (click)="onEdit.emit(timelineEvent())"
+        (keyup)="onEdit.emit(timelineEvent())">
         <ng-icon name="saxEditOutline" size="20" />
       </a>
     </li>
     <li>
       <a
-        class="btn btn-ghost btn-sm hover:bg-warning hover:text-warning-content">
-        <ng-icon
-          name="saxTrashOutline"
-          size="20"
-          (click)="onDelete.emit(timelineEvent())" />
+        tabindex="1"
+        class="btn btn-ghost btn-sm hover:bg-warning hover:text-warning-content"
+        (click)="onDelete.emit(timelineEvent())"
+        (keyup)="onDelete.emit(timelineEvent())">
+        <ng-icon name="saxTrashOutline" size="20" />
       </a>
     </li>
   </ul>
