--- a/src/app/pages/non-authorized/develop/develop-page.component.html
+++ b/src/app/pages/non-authorized/develop/develop-page.component.html
@@ -3,9 +3,9 @@
     <app-content-title title="UI components" />
 
     <div class="py-4">
-      <h2 class="text-2xl">EditEventFormComponent</h2>
-      <div class="mt-4 grid grid-cols-2 gap-4">
-        Edit event form with preview
+      <h2 class="text-2xl">TimelineComponent</h2>
+      <div class="mt-4 grid w-full grid-cols-2 gap-4">
+        <app-timeline [timeline]="dumpTimelineEvents()" />
       </div>
     </div>
 
