feat: add disabled state for edit form components

--- a/src/app/pages/non-authorized/develop/develop-page.component.html
+++ b/src/app/pages/non-authorized/develop/develop-page.component.html
@@ -4,7 +4,7 @@
 
     <div class="py-4">
       <h2 class="text-2xl">TimelineComponent</h2>
-      <div class="mt-4 grid w-full grid-cols-2 gap-4">
+      <div class="mt-4 grid w-full grid-cols-1 gap-4">
         <app-timeline [timeline]="dumpTimelineEvents()" />
       </div>
     </div>
@@ -26,12 +26,16 @@
     </div>
 
     <div class="py-4">
-      <h2 class="text-2xl">EventAdditionalContentComponent</h2>
+      <h2 class="text-2xl">EditEventFormComponent</h2>
       <div class="mt-4 grid grid-cols-2 gap-4">
+        <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="0" />
         <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="1" />
         <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="2" />
         <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="3" />
-        <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="4" />
+        <app-edit-event-form
+          [editEvent]="dumpAddEvent()"
+          [loading]="true"
+          class="col-span-2" />
       </div>
     </div>
 
