--- a/src/app/widgets/edit-event/edit-event.component.html
+++ b/src/app/widgets/edit-event/edit-event.component.html
@@ -19,6 +19,7 @@
         <app-edit-event-form
           [editEvent]="formEvent()"
           [openTab]="openTab()"
+          [loading]="loading()"
           (dismissAction)="closeEditForm()"
           (valuesChanged)="updatePreviewEvent($event)"
           (saveEvent)="saveEvent()" />
